--- a/gdv4002-base1/gdv4002-base1/gdv4002-base1.vcxproj
+++ b/gdv4002-base1/gdv4002-base1/gdv4002-base1.vcxproj
@@ -136,6 +136,7 @@ copy "$(SolutionDir)Libs\FreeImage\Wrapper\FreeImagePlus\dist\x64\FreeImagePlus.
   <ItemGroup>
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="GameObject2D.cpp" />
+    <ClCompile Include="glPrint.cpp" />
     <ClCompile Include="GUClock.cpp" />
     <ClCompile Include="GUMemory.cpp" />
     <ClCompile Include="GUObject.cpp" />
@@ -145,6 +146,7 @@ copy "$(SolutionDir)Libs\FreeImage\Wrapper\FreeImagePlus\dist\x64\FreeImagePlus.
   <ItemGroup>
     <ClInclude Include="Engine.h" />
     <ClInclude Include="GameObject2D.h" />
+    <ClInclude Include="glPrint.h" />
     <ClInclude Include="GraphicsCore.h" />
     <ClInclude Include="GUClock.h" />
     <ClInclude Include="GUMemory.h" />
