--- a/gdv4002-base1/gdv4002-base1/gdv4002-base1.vcxproj.filters
+++ b/gdv4002-base1/gdv4002-base1/gdv4002-base1.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="Enemy.cpp">
       <Filter>My Classes</Filter>
     </ClCompile>
+    <ClCompile Include="Snowflake.cpp">
+      <Filter>My Classes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine.h">
@@ -84,6 +87,9 @@
       <Filter>My Classes</Filter>
     </ClInclude>
     <ClInclude Include="Enemy.h">
+      <Filter>My Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="Snowflake.h">
       <Filter>My Classes</Filter>
     </ClInclude>
   </ItemGroup>
